--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "json-server": "^0.11.0",
     "lodash": "^4.17.4",
     "vue": "^2.3.3",
+    "vue-datepicker": "^1.3.0",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1"
   },
